[package]
name = "wenv"
version = "0.4.0-rc.2"
edition = "2024"
authors = ["Cameron Tacklind <cameron@tacklind.com>"]
description = "A terminal UI for viewing and setting .env secrets without revealing their values"
license = "MIT"
repository = "https://github.com/cinderblock/wenv"
readme = "README.md"
keywords = ["dotenv", "env", "secrets", "tui", "cli"]
categories = ["command-line-utilities"]

[dependencies]

# Unix only: FFI declarations for the system libc (always present at runtime —
# nothing to install). Windows talks to kernel32 directly with no extra crate.
[target.'cfg(unix)'.dependencies]
libc = { version = "0.2", default-features = false }

[profile.dev]
panic = "abort"   # no_std non-test builds have no unwinder

[profile.release]
opt-level = "z"   # optimize for size
lto = true        # link-time optimization across crates
codegen-units = 1 # better optimization at the cost of compile time
panic = "abort"   # drop unwinding tables
strip = true      # strip symbols from the binary

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
